html and assets almost done

--- a/index.html
+++ b/index.html
@@ -25,22 +25,42 @@
     
     <section class="Background"></section>
     <section class="content">
-        <div class="content-box">
+        <div id="About-Me" class="content-box">
             <h2>About Me</h2>
             <img src="./assets/profile-pic.png" alt="Juan img">
         <p>My name is Juan Cornejo and I am a full stack developer</p>
         </div>
     
-        <div class="content-box">
+        <div id="Work" class="content-box">
             <h2>Work</h2>
+            <div class="box">
+                <img src="./assets/Horiseon-project.png" alt="webpage-sample">
+                <h3>HTML/CSS Webpage</h3>
+            </div>
+            <div class="box">
+                <img src="./assets/bug.webp" alt="bug">
+                <h3>Example</h3>
+            </div>
+            <div class="box">
+                <img src="./assets/can.jpg" alt="can">
+                <h3>Example</h3>
+            </div>
+            <div class="box">
+                <img src="./assets/frog.jpeg" alt="frog">
+                <h3>Example</h3>
+            </div>
+            <div class="box">
+                <img src="./assets/mushrooms.jpg" alt="mushrooms">
+                <h3>Example</h3>
+            </div>
         </div>
 
-        <div class="content-box">
+        <div id="Contact-Me" class="content-box">
             <h2>Contact Me</h2>
             <nav>
                 <ul>
                     <li><a href="mailto:jaunido@gmail.com">Email</a></li>
-                    <!-- I cant log in to my Linked in account to get the link ill update it when i get access -->
+                    <!-- I cant log in to my Linked in account to get the link. i'll update it when i get access -->
                     <li><a href="placeholer">Linked In</a></li> 
                     <li>(209) 251-8257</li>
                 </ul>
