--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juan Cornejo Portfolio</title>
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
 <body>
     <header>
@@ -28,45 +29,46 @@
         <div id="About-Me" class="content-box">
             <h2>About Me</h2>
             <img src="./assets/profile-pic.png" alt="Juan img">
-        <p>My name is Juan Cornejo and I am a full stack developer</p>
+            <p>My name is Juan Cornejo and I am a full stack developer</p>
         </div>
     
         <div id="Work" class="content-box">
-            <h2>Work</h2>
-            <div class="box">
-                <img src="./assets/Horiseon-project.png" alt="webpage-sample">
-                <h3>HTML/CSS Webpage</h3>
+            <h2 class="section-title">Work</h2>
+            <div class="work-grid">
+                <a href="https://juanycorn.github.io/Homework-First-Week/" class="box">
+                    <img src="./assets/Horiseon-project.png" alt="webpage-sample">
+                    <h3>HTML/CSS Webpage</h3>
+                </a>
+                <a href="https://juanycorn.github.io/" class="box">
+                    <img src="./assets/bug.webp" alt="bug">
+                    <h3>Example</h3>
+                </a>
+                <a href="https://juanycorn.github.io/" class="box">
+                    <img src="./assets/can.jpg" alt="can">
+                    <h3>Example</h3>
+                </a>
+                <a href="https://juanycorn.github.io/" class="box">
+                    <img src="./assets/frog.jpeg" alt="frog">
+                    <h3>Example</h3>
+                </a>
+                <a href="https://juanycorn.github.io/" class="box">
+                    <img src="./assets/mushrooms.jpg" alt="mushrooms">
+                    <h3>Example</h3>
+                </a>
             </div>
-            <div class="box">
-                <img src="./assets/bug.webp" alt="bug">
-                <h3>Example</h3>
-            </div>
-            <div class="box">
-                <img src="./assets/can.jpg" alt="can">
-                <h3>Example</h3>
-            </div>
-            <div class="box">
-                <img src="./assets/frog.jpeg" alt="frog">
-                <h3>Example</h3>
-            </div>
-            <div class="box">
-                <img src="./assets/mushrooms.jpg" alt="mushrooms">
-                <h3>Example</h3>
-            </div>
-        </div>
-
-        <div id="Contact-Me" class="content-box">
-            <h2>Contact Me</h2>
-            <nav>
-                <ul>
-                    <li><a href="mailto:jaunido@gmail.com">Email</a></li>
-                    <!-- I cant log in to my Linked in account to get the link. i'll update it when i get access -->
-                    <li><a href="placeholer">Linked In</a></li> 
-                    <li>(209) 251-8257</li>
-                </ul>
-            </nav>
         </div>
     </section>
 
+    <footer>
+        <h2 id="Contact-Me">Contact Me</h2>
+        <nav>
+            <ul>
+                <li><a href="mailto:jaunido@gmail.com">Email</a></li>
+                <!-- I cant log in to my Linked in account to get the link. i'll update it when i get access -->
+                <li><a href="placeholer">Linked In</a></li> 
+                <li>(209) 251-8257</li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
